// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings.vue given badges are disabled renders 1`] = `
<div>
  <div
    class="settings-page"
  >
    <div
      class="settings-header"
    >
      <h1
        class="ds-heading ds-heading-h1"
      >
        settings.name
      </h1>
    </div>
     
    <div
      class="settings-layout"
    >
      <div
        class="settings-menu-desktop"
      >
        <nav
          class="os-menu"
        >
          <ul
            class="os-menu-list"
          >
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings"
                to="/settings"
              >
                settings.data.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-email-address"
                to="/settings/my-email-address"
              >
                settings.email.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/security"
                to="/settings/security"
              >
                settings.security.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/privacy"
                to="/settings/privacy"
              >
                settings.privacy.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-social-media"
                to="/settings/my-social-media"
              >
                settings.social-media.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/muted-users"
                to="/settings/muted-users"
              >
                settings.muted-users.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/blocked-users"
                to="/settings/blocked-users"
              >
                settings.blocked-users.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/embeds"
                to="/settings/embeds"
              >
                settings.embeds.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/notifications"
                to="/settings/notifications"
              >
                settings.notifications.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/data-download"
                to="/settings/data-download"
              >
                settings.download.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/delete-account"
                to="/settings/delete-account"
              >
                settings.deleteUserAccount.name
              </a>
            </li>
          </ul>
        </nav>
      </div>
       
      <div
        class="settings-menu-mobile"
      >
        <select
          class="settings-select"
        >
          <option
            value="/settings"
          >
            
          settings.data.name
        
          </option>
          <option
            value="/settings/my-email-address"
          >
            
          settings.email.name
        
          </option>
          <option
            value="/settings/security"
          >
            
          settings.security.name
        
          </option>
          <option
            value="/settings/privacy"
          >
            
          settings.privacy.name
        
          </option>
          <option
            value="/settings/my-social-media"
          >
            
          settings.social-media.name
        
          </option>
          <option
            value="/settings/muted-users"
          >
            
          settings.muted-users.name
        
          </option>
          <option
            value="/settings/blocked-users"
          >
            
          settings.blocked-users.name
        
          </option>
          <option
            value="/settings/embeds"
          >
            
          settings.embeds.name
        
          </option>
          <option
            value="/settings/notifications"
          >
            
          settings.notifications.name
        
          </option>
          <option
            value="/settings/data-download"
          >
            
          settings.download.name
        
          </option>
          <option
            value="/settings/delete-account"
          >
            
          settings.deleteUserAccount.name
        
          </option>
        </select>
      </div>
       
      <div
        class="settings-content"
        id="settings-content"
      >
        <transition-stub
          appear="true"
          name="slide-up"
        >
          <nuxt-child-stub />
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`settings.vue given badges are enabled renders 1`] = `
<div>
  <div
    class="settings-page"
  >
    <div
      class="settings-header"
    >
      <h1
        class="ds-heading ds-heading-h1"
      >
        settings.name
      </h1>
    </div>
     
    <div
      class="settings-layout"
    >
      <div
        class="settings-menu-desktop"
      >
        <nav
          class="os-menu"
        >
          <ul
            class="os-menu-list"
          >
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings"
                to="/settings"
              >
                settings.data.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-email-address"
                to="/settings/my-email-address"
              >
                settings.email.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/badges"
                to="/settings/badges"
              >
                settings.badges.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/security"
                to="/settings/security"
              >
                settings.security.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/privacy"
                to="/settings/privacy"
              >
                settings.privacy.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-social-media"
                to="/settings/my-social-media"
              >
                settings.social-media.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/muted-users"
                to="/settings/muted-users"
              >
                settings.muted-users.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/blocked-users"
                to="/settings/blocked-users"
              >
                settings.blocked-users.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/embeds"
                to="/settings/embeds"
              >
                settings.embeds.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/notifications"
                to="/settings/notifications"
              >
                settings.notifications.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/data-download"
                to="/settings/data-download"
              >
                settings.download.name
              </a>
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/delete-account"
                to="/settings/delete-account"
              >
                settings.deleteUserAccount.name
              </a>
            </li>
          </ul>
        </nav>
      </div>
       
      <div
        class="settings-menu-mobile"
      >
        <select
          class="settings-select"
        >
          <option
            value="/settings"
          >
            
          settings.data.name
        
          </option>
          <option
            value="/settings/my-email-address"
          >
            
          settings.email.name
        
          </option>
          <option
            value="/settings/badges"
          >
            
          settings.badges.name
        
          </option>
          <option
            value="/settings/security"
          >
            
          settings.security.name
        
          </option>
          <option
            value="/settings/privacy"
          >
            
          settings.privacy.name
        
          </option>
          <option
            value="/settings/my-social-media"
          >
            
          settings.social-media.name
        
          </option>
          <option
            value="/settings/muted-users"
          >
            
          settings.muted-users.name
        
          </option>
          <option
            value="/settings/blocked-users"
          >
            
          settings.blocked-users.name
        
          </option>
          <option
            value="/settings/embeds"
          >
            
          settings.embeds.name
        
          </option>
          <option
            value="/settings/notifications"
          >
            
          settings.notifications.name
        
          </option>
          <option
            value="/settings/data-download"
          >
            
          settings.download.name
        
          </option>
          <option
            value="/settings/delete-account"
          >
            
          settings.deleteUserAccount.name
        
          </option>
        </select>
      </div>
       
      <div
        class="settings-content"
        id="settings-content"
      >
        <transition-stub
          appear="true"
          name="slide-up"
        >
          <nuxt-child-stub />
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;
